--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
     <title>Hello (Hill-Shaded) World!</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
@@ -26,7 +25,7 @@
     <figure>
       <img
         style="max-height: 40vh"
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/ALPSMLC30_N048W124_DSM.900m.png?v=1687792965948"
+        src="./glitch-assets/ALPSMLC30_N048W124_DSM.900m.png"
       />
     </figure>
 
@@ -38,7 +37,7 @@
     <figure>
       <img
         style="max-height: 40vh"
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/ALPSMLC30_N048W124_DSM.900m.png?v=1687807910178"
+        src="./glitch-assets/ALPSMLC30_N048W124_DSM.900m.png"
       />
     </figure>
 
@@ -79,7 +78,7 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/ca49a69d-9691-4aa3-82fa-2f9d7cc13977.image.png?v=1687808057302"
+        src="./glitch-assets/ca49a69d-9691-4aa3-82fa-2f9d7cc13977.image.png"
       />
     </figure>
 
@@ -95,7 +94,7 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/4ebb214e-ce20-4ced-a695-d5c55d79e79b.image.png?v=1687808402386"
+        src="./glitch-assets/4ebb214e-ce20-4ced-a695-d5c55d79e79b.image.png"
       />
     </figure>
 
@@ -124,7 +123,7 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/1ae33f7f-1734-4858-8389-c431a1371c9e.image.png?v=1688153884945"
+        src="./glitch-assets/1ae33f7f-1734-4858-8389-c431a1371c9e.image.png"
       />
     </figure>
 
@@ -146,7 +145,7 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/6a6ce669-97d4-46ed-9e44-4be3dea6899f.image.png?v=1688153947136"
+        src="./glitch-assets/6a6ce669-97d4-46ed-9e44-4be3dea6899f.image.png"
       />
     </figure>
 
@@ -167,16 +166,17 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/5f62ae82-a8e5-442d-8b17-cd8c5ef1baf0.image.png?v=1688154522358"
+        src="./glitch-assets/5f62ae82-a8e5-442d-8b17-cd8c5ef1baf0.image.png"
       />
     </figure>
 
     <p>That might look a little fuzzy, but we're not quite done yet.</p>
 
     <p>
-      If we add the shaded height map as a 70% transparent overlay to the previous
-      view (without blurring this time), we end up highlighting and "crisping up"
-      all the landscape features, and end up with a kick-ass looking 2D map!
+      If we add the shaded height map as a 70% transparent overlay to the
+      previous view (without blurring this time), we end up highlighting and
+      "crisping up" all the landscape features, and end up with a kick-ass
+      looking 2D map!
     </p>
 
     <p>
@@ -188,7 +188,7 @@
 
     <figure>
       <img
-        src="https://cdn.glitch.global/6f093c76-7f96-4f52-94dd-2b1647bfb115/6c53bf48-e957-49fb-942f-6018c14d3ce1.image.png?v=1688155820711"
+        src="./glitch-assets/6c53bf48-e957-49fb-942f-6018c14d3ce1.image.png"
       />
     </figure>
 
@@ -205,27 +205,7 @@
     </p>
 
     <p>— <a href="https://mastodon.social/@TheRealPomax">Pomax</a></p>
-    
-    <hr style="margin:3em 0;">
-    
-    <p style="text-align:center">
-      <a href="https://support.glitch.com/t/turning-height-map-images-into-sweet-2d-maps/63039/2">Discuss this page on the Glitch forum!</a>
-    </p>
 
-    <!-- The footer holds our remix button — you can keep or delete it ✂ -->
-    <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
-    </footer>
+    <hr style="margin: 3em 0" />
   </body>
 </html>
