--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" type="module" async></script>
   </head>
   <body>
-    <h1>Let's test some hill shading</h1>
+    <h1><a href="https://github.com/Pomax/testing-hill-shading">Let's test some hill shading</a></h1>
 
     <p>
       Ever seen a map that changes shading? Move your cursor or tap anywhere in
